--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,11 @@
 
+
+  
+
+
+
 <%= simple_form_for @post do |f| %>
+  <%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) %>
   <%= f.input :title %>
   <%= f.input :content%>
   <%= f.submit%>
