--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,19 @@
-<h1>Post Lists</h1>
+<h1>Topic Lists</h1>
 
 <table>
   <%@posts.each do |p| %>
     <tr>
       <td> 
-      
-          <h2><%= link_to p.title, post_path(p) %></h2>
+          
+          <h2>
+            <%= link_to p.title, post_path(p) %>
+
+            
+          </h2>
           
           <h3>Posted at <%= time_ago_in_words(p.created_at) %> ago by 
             <%= p.user.email %>
-            
+            <%= link_to "Delete", post_path(p),:method => :delete %> 
           </h3> 
 
       </td>
@@ -17,4 +21,5 @@
   <% end %>
 </table>
 
-<%= link_to "New Post" , new_post_path %>
+
+
