--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,35 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Forum</title>
+  <title>Rails Forum</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header class="main_header">
+    <div id="logo"><p>Rails Forum </p><%= link_to "About Us", about_posts_path%> </div>
+    <div id="buttons">
+      <% if user_signed_in? %>
+        <%= link_to "New Topic" , new_post_path %> <br>
+        <%= link_to "Log Out", destroy_user_session_path, :method => :delete %>
+      <% else %>
+        <%=link_to "Sign Up", new_user_registration_path %> <br>
+        <%=link_to "Sign In", new_user_session_path %>
+      <% end %>  
+    </div>
+  </header>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-  
-  <%= yield %>
+  <div class="wrapper">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+  </div>
+
+  <div class="wrapper">
+    <%= yield %>
+  </div>
+
 
 </body>
 </html>
