--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,32 @@
+<ul>
+   <% @post.categories.each do |c| %>
+   <li><%= c.name %></li>
+   <% end %>
+ </ul>
+
 
 <h1><%= @post.title %> </h1>  
 
 <p><%= @post.content %></p>
 
+<div id="comment">
+  <h3>
+    <%= @post.comments.count %>
+    Comments
+  </h3>
+   <%= render @post.comments %> 
+
+  <% if user_signed_in? %>
+    <h3>Reply</h3>
+    <%= render "comments/form" %>
+  <%end%>  
+
+</div>
+
+
 <%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Delete", post_path(@post),:method => :delete %>
+
 
 <p>
-<%= link_to "Back to Posts", posts_path %>
+<%= link_to "Back to Topics", posts_path %>
 </p>
